--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Cypress 12 Template",
     "main": "index.js",
     "scripts": {
-        "test": "cypress open",
+        "test": "cypress run",
         "lint": "npx eslint src test",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier 5 test --check",
